tests/NormalTests/paczka1/small_fuzzy/43152409.err
Error in line 5: Ze7DJvglM S802 9,5
Error in line 8: ZoFx S802 59,8
Error in line 6: Ze7DJvglM S728 84,1
